<resources>
    <string name="app_name">SimpleInstagram</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="logout">LOGOUT</string>
    <string name="submit">Submit</string>
    <string name="sign_up">SIGN UP</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="description">Description...</string>
    <string name="take_picture">TAKE PICTURE</string>
</resources>
